--- a/web/app/views/login/index.html
+++ b/web/app/views/login/index.html
@@ -2,8 +2,12 @@
 <div class="header login">
     <div class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img class="system-logo" src="src/images/logo.png" alt="LOGO">
+            <a class="navbar-brand" href="#/">
+                <img class="system-logo" src="src/images/logo-icon.png" alt="LOGO">
+                <div class="system-name">
+                    <div class="cn-name">美创某某管理系统</div>
+                    <div class="en-name">MouMou management system</div>
+                </div>
             </a>
         </div>
     </div>
