--- a/web/app/src/css/mod/common/table.css
+++ b/web/app/src/css/mod/common/table.css
@@ -56,3 +56,18 @@
     word-wrap:break-word;
     word-break: break-all;
 }
+
+.tr-loading{
+    height: 310px;
+    background-color: #fff;
+    text-align: center;
+}
+
+.loading {
+    display: inline-block;
+    min-width: 70px;
+    min-height: 30px;
+    width: 100%;
+    height: 100%;
+    background: url(../../../images/loading-b.gif) center center no-repeat;
+}
