--- a/web/app/views/mod/header.html
+++ b/web/app/views/mod/header.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<div class="navbar navbar-inverse navbar-fixed-top navbar-self" role="navigation">
     <div class="container-fluid">
         <div class="row">
 	        <div class="col-lg-12">
@@ -12,20 +12,17 @@
 	            </div>
 	            <div class="collapse navbar-collapse js-navbar-collapse">
 	            	<ul class="nav navbar-nav navbar-left">
-	            		<li><a class="system-logo" href="#/setting"><!-- <img alt="LOGO" src="" /> -->美创某某管理平台</a></li>
+	            		<li><a class="system-logo" href="#/setting"><!--<img alt="LOGO" src="src/images/logo.png" />-->美创某某管理平台</a></li>
             		</ul>
-	                <ul ng-if="!onlyPwd" class="nav navbar-nav navbar-left">
-			            <li ng-class="{'home':roleId<0,'current':pathStr.indexOf('setting')>-1}">
+	                <ul class="nav navbar-nav navbar-left">
+			            <li class="top-list-item current">
 			                <a ng-if="roleId > 0" href="#/setting">系统配置</a>
 			                <a ng-if="roleId == -1" href="#/setting/users">系统配置</a>
 			                <a ng-if="roleId == -2" href="#/setting/audit">系统配置</a>
 			                <a ng-if="roleId == -3" href="#/setting/assess">系统配置</a>
 			            </li>
 	                </ul>
-	                <ul ng-if="onlyPwd" class="nav navbar-nav navbar-left">
-			            <li class="home current"><a href="#/setting/modify">系统配置</a></li>
-			        </ul>
-	        
+
 	    			<ul class="nav navbar-nav navbar-right">
 	                    <li><a>欢迎你，{{userName}}</a></li>
 	                    <!-- <li><a role="button">修改密码</a></li> -->
