--- a/web/app/views/mod/header.html
+++ b/web/app/views/mod/header.html
@@ -26,7 +26,7 @@
 	    			<ul class="nav navbar-nav navbar-right">
 	                    <li><a>欢迎你，{{userName}}</a></li>
 	                    <!-- <li><a role="button">修改密码</a></li> -->
-	                    <li><a role="button" href="#/login">退出</a></li>
+	                    <li><a href="javascript:;" role="button" ng-click="clickLogout()">退出</a></li>
 	                </ul>
 	            </div>
 	        </div>
